# TranscodingVerification

./: .clang-format  README.md  meson.build
include/: mea.h  mea_internal.h  meson.build
src/: mea.c  mea_frame.c  meson.build  msssim.c  psnr.c
test/: meson.build  metrics.c  sse.c
